# StealthBladeInterferer

./: README.md
Car/object-detection/: yolov8.py
Car/object-detection/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
Car/object-detection/dataset/test/labels/: img101_png.rf.2fe937a261de3503ab50e63ea82bcc15.txt  img102_png.rf.f3d1a57872a42bd8e006909bef1656d8.txt  img118_png.rf.583581c1b7f8bb1b2070e338035b381f.txt  img121_png.rf.83dca810b224ff2f5ca9d340adb9859c.txt  img127_png.rf.d7f5f39b931e2e50a76f8e4f43cc8c33.txt  img138_png.rf.b985b5186b7b1a50655bea5654a2d8b1.txt  img140_png.rf.338c72b78298738fb8ad24f4ecb2467a.txt  img164_png.rf.88dfb01ed6bbdc265b94e185a839d2af.txt  img170_png.rf.aad2501339e652605f9a50beac1f446b.txt  img191_png.rf.ac9d3eb40d97cf56bb9ae16149bed235.txt  img198_png.rf.acdc607c334a201235db061c97ac7fd5.txt  img201_png.rf.702ee04634483a5c1a253113b6c103a6.txt  img205_png.rf.e1446fae00902b89681c32b0f143d1f2.txt  img206_png.rf.16ff117314636a17a93d2e97720f05e5.txt  img243_png.rf.de14463e282da2dc77854e9d5e1ed003.txt  img245_png.rf.165923288a72ad77fcd51c686038170b.txt  img248_png.rf.0d8a7698d785d9b103c48c8bf274c919.txt  img252_png.rf.10536d3dbfb0053147da2518ac19a497.txt  img263_png.rf.0eaa023c7454ebfb0db6c016d73c768e.txt  img266_png.rf.05cce8475b31f35e827138e8bde37d34.txt  img305_png.rf.6f99287f00b636be36a46c51f962ea4a.txt  img32_png.rf.bc8c5bd29d3927a6c65f7bf833a2e963.txt  img44_png.rf.d940181c975460e245be9fa782bf99f3.txt  img58_png.rf.6a9d8610dd8d6960db9c78595d8af51e.txt  img73_png.rf.75b50355f95d816b551fa6843a8b91a0.txt  img75_png.rf.0efc746a12d4e12c3fda7a23ef379e15.txt  img92_png.rf.cbb5c2e82ee8a3b34307231991a35754.txt
Car/object-detection/dataset/train/: labels.cache
Car/object-detection/dataset/train/labels/: img100_png.rf.4a42088b6396f4e9ad1a9fbe0b77a137.txt  img100_png.rf.7e9e885c2e528b75e54d10df0c4b25b2.txt  img100_png.rf.c7b3fea72b7e00b5b365af3fe8730126.txt  img103_png.rf.875745b09d4e0fad158987439d70a12c.txt  img103_png.rf.b1e95f25ea00cc82d6d140993364573c.txt  img103_png.rf.be18973d265e2c9f0af5ba13a4b8ec29.txt  img104_png.rf.205ab6397ef02f8b773166d9806ede89.txt  img104_png.rf.602f431da717e461423722397d52a048.txt  img104_png.rf.65eb92ca8f36400c314b68135e9da970.txt  img105_png.rf.1e4960b44adbd8d26bc75be0ec5ba978.txt  img105_png.rf.2aed0e8e38e38089866986b737c3fec5.txt  img105_png.rf.35b7e1543e0623be84e7dd33b0e842ea.txt  img106_png.rf.3190afb2f843ace2bc513c178ba95ae3.txt  (+544 more)
Car/object-detection/dataset/valid/: labels.cache
Car/ws_livox/src/: CMakeLists.txt
Car/ws_livox/src/FAST_LIO/: CMakeLists.txt
Car/ws_livox/src/LiDAR_IMU_Init/: CMakeLists.txt
Car/ws_livox/src/chassis/: CMakeLists.txt  package.xml
Car/ws_livox/src/chassis/launch/: chassis.launch
Car/ws_livox/src/chassis/scripts/: chassis_test.py  chassis_tunning.py  donkey_chassis.deprecated.py  donkey_chassis_pid.py  donkey_chassis_pid2.py  donkey_chassis_pid_periodic.py
Car/ws_livox/src/donkey_description/: CMakeLists.txt  package.xml
Car/ws_livox/src/donkey_description/launch/: goal_publisher.launch  imu_listener.launch  localization.launch  mapping.launch  navigation.launch  view_urdf.launch
Car/ws_livox/src/donkey_description/scripts/: goal_publisher.py  goal_publisher_det.py  goal_publisher_det_flask.py  poses.py  record_poses.py  serial_test.py
Car/ws_livox/src/donkey_description/urdf/: donkey.urdf
Car/ws_livox/src/donkey_nav/: CMakeLists.txt  package.xml
Car/ws_livox/src/teleop_twist_keyboard/: teleop_twist_keyboard.py
USRP/communication/: communicate1.grc  communicate2.grc
USRP/jammer/usrp_test1/: CMakeLists.txt  main.cpp  scan_enemy.cpp  scan_enemy.h  send_noise.cpp  send_noise.h
(+101 files in other folders)
