<?xml version="1.0"?>
<package format="2">
  <name>donkey_description</name>
  <version>0.1.0</version>
  <description>
    The donkey_description package provides the URDF and meshes for the Donkey robot.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
